<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Been There, Done That!</string>
   <string name="help">Help Screen</string>
    <string name="menu">Main Menu </string>
    <string name="splash">Splash Screen</string>
    <string name="settings">Settings Screen</string>
    <string name="game">Game Screen</string>
    <string name="scores">Scores Screen</string>


    <string name="action_settings">Settings</string>

    <string name="app_logo_top">BEEN THERE</string>
    <string name="app_logo_bottom">DONE THAT!</string>
    <string name="app_version_info">Version 1.0.0</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_play">Play Game</string>
    <string name="menu_item_scores">View Scores</string>
    <string name="menu_item_help">Help</string>
    <string name="content_des">Es una prueba</string>
    
    <string name="all_scores">All Scores</string>
    <string name="friends_scores">Scores of Friends</string>
    <string name="no_scores">No scores to show</string>
    <string name="username">Username</string>
    <string name="rank">Ranking</string>
    <string name="score">Score</string>
    <string name="wait_msg">Retrieving Scores</string>
    <string name="wait_title">Loading&#8230;</string>
    
    <string name="gender_male">Male</string>
    <string name="gender_female">female</string>
    <string name="gender_neutral">Prefer Not To Say</string>
    
    <string name="settings_nick">Nickname:</string>
    <string name="settings_email">Email:</string>
    <string name="settings_pass">Password:</string>
    <string name="setting_button_pass">Password</string>
    <string name="setting_show_pass">Password No Set</string>
    <string name="setting_show_date">Date No Set</string>
    <string name="setting_birth_date">Birth Date:</string>
    <string name="setting_button_date">B-Date</string>
    <string name="setting_gender">Gender:</string>
    <string name="setting_pwd_set">Password Set</string>
    
    <string name="passwd_entry1">Password:</string>
    <string name="passwd_entry2">Password (Again):</string>
    <string name="passwd_entryError"></string>
    <string name="passwd_pwd_equal">Password match</string>
    <string name="passwd_pwd_noequal">Password dont match, please check</string>
    <string name="passwd_title">Set Password</string>
    
    
	<string name="game_button_yes">Yes</string>
	<string name="game_button_no">No</string>
	<string name="game_no_more_question">No Questions Available</string>
  	
	<string name="imagen_description">Imagen</string>
  
  

</resources>
