<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_password"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFFF"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/password1"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="80"
        
        android:hint="@string/passwd_entry1" />
    <EditText
        android:id="@+id/password2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
       
        android:hint="@string/passwd_entry2"/>
    
    <TextView
        android:id="@+id/textView_PwdProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwd_entryError"
        android:textColor="@color/error_color" />
</LinearLayout>