<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/passwd_margin"
    android:orientation="vertical" >

     <TextView
         android:id="@+id/textView_Pwd_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/passwd_title_size"
         android:layout_gravity="center_horizontal"
         android:text="@string/passwd_title" />
    
    <TextView
        android:id="@+id/textView_Pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwd_entry1" />

    <EditText
        android:id="@+id/editText_Pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
       
        android:ems="10"
        android:inputType="textPassword"
        android:imeOptions="actionDone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_Pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwd_entry2" />

    <EditText
        android:id="@+id/editText_PWd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword" />

    
    <TextView
        android:id="@+id/textView2_PwdProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwd_entryError"
        android:textColor="@color/error_color" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        style="@android:attr/buttonBarStyle"        
        >

        
        	

        <Button
            android:id="@+id/button_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:gravity="center_horizontal" />
        
        <Button
            android:id="@+id/button_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" 
            style="?android:attr/buttonBarButtonStyle"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    

</LinearLayout>
